// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box default render 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<Box
  display="flex"
>
  <div
    className="c0"
    display="flex"
  />
</Box>
`;

exports[`Box renders with some styling props 1`] = `
.c0 {
  display: block;
  margin: 25px;
  padding: 15px 10em 0;
  width: 100px;
  overflow: hidden;
}

<Box
  display="block"
  margin={25}
  overflow="hidden"
  padding="15px 10em 0"
  width={100}
>
  <div
    className="c0"
    display="block"
    overflow="hidden"
    width={100}
  />
</Box>
`;

exports[`Box should pass event handlers 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

<Box
  display="flex"
  onClick={[MockFunction]}
>
  <div
    className="c0"
    display="flex"
    onClick={[MockFunction]}
  />
</Box>
`;
